<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vehicle Restriction</string>
    <string name="action_settings">Settings</string>
    <string name="text_view_title_placa">License Plate:</string>
    <string name="text_view_title_type">Category:</string>
    <string name="text_view_title_hour">Schedule:</string>
    <string name="text_add_value">Add Vehicle</string>
    <string name="auto_detect_city_title">Autodetect City</string>
    <string name="auto_detect_city_summ">The system automatically set the city where you are.</string>
    <string name="pref_title_cities">City</string>
    <string name="pref_cities_dialog_title">Choose a City</string>
    <string name="category_cities_title">Cities</string>
    <string name="pref_city_default" translatable="false">Medellin</string>
    <string name="cities_summ">Select the City where your vehicle is.</string>
    <string name="text_view_format_title">Selected City: %s</string>
    <string name="message_for_warning">Warning, you could pay penalties</string>
    <string name="title_activity_create_vehicle">Create Vehicle</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="type_car">Car</string>
    <string name="type_motorcycle">Motorcycle</string>
    <string name="type_taxi" translatable="false">Taxi</string>
    <string name="type_electric_car">Electric Car</string>
    <string name="button_text_title_create">Create</string>
    <string name="text_edit_placa_hint" translatable="false">(AAA-999)</string>
    <string name="text_view_empty_list">Please add a vehicle</string>
    <string name="button_text_empty_type"><![CDATA[<Select a category>]]></string>
    <string name="select_all_fields_msg">Please fill both fields</string>
    <string name="button_text_title_update">Update</string>
    <string name="button_text_title_delete">Delete</string>
    <string name="text_title_without_restriction">[Without Restrictions]</string>

</resources>
