<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="co.mobilemakers.picoyplaca.CreateVehicle"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/text_view_title_placa"
                android:id="@+id/textView2"
                android:gravity="center_vertical"
                android:layout_weight="1" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/edit_text_placa"
                android:layout_weight="2"
                android:hint="@string/text_edit_placa_hint"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/text_view_title_type"
                android:id="@+id/textView3"
                android:gravity="center_vertical"
                android:layout_weight="1" />

            <Button
                android:layout_width="0dp"
                android:gravity="center_vertical|center_horizontal"
                android:layout_height="wrap_content"
                android:text="@string/button_text_empty_type"
                android:id="@+id/button_type"
                android:contentDescription="@string/type_car"
                android:onClick="showPopup"
                android:layout_weight="2" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|right">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_title_delete"
            android:visibility="invisible"
            android:id="@+id/button_delete" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_title_create"
            android:id="@+id/button_create" />
    </LinearLayout>
</LinearLayout>
